# GroupsExtension

./: CMakeLists.txt  README.md
CLI/GROUPS/: CMakeLists.txt  Common.cmake  Groups.cmake  README.md  SuperBuild.cmake
CLI/GROUPS/SuperBuild/: External_ITKv4.cmake  External_LAPACK.cmake  External_MeshLib.cmake  External_RigidAlignment.cmake  External_SlicerExecutionModel.cmake  External_SurfRemesh.cmake  External_VTK.cmake  External_VTK_build_step.cmake.in  External_VTK_patch.cmake
CLI/GROUPS/cmake/: ITKSetStandardCompilerFlags.cmake  PreventInBuildInstalls.cmake  PreventInSourceBuilds.cmake  SlicerExtensionsConfigureMacros.cmake  SlicerMacroCheckExternalProjectDependency.cmake  SlicerMacroEmptyExternalProject.cmake
CLI/GROUPS/src/: CMakeLists.txt  GroupwiseRegistration.cpp  GroupwiseRegistration.h  GroupwiseRegistration.h~
CLI/GROUPS/src/lapack/: lapacke.h
CLI/GROUPS/wrapper/: CMakeLists.txt  Groups.cxx  Groups.xml
GroupWiseRegisteration/: CMakeLists.txt  GroupWiseRegisteration.py
RigidAlignment/: CMakeLists.txt  RigidAlignment.py
